# platform

./: README.md
image_api/gateway_service/: base_nginx.conf  docker-entrypoint.sh  gen-nginx-conf-env.py
image_api/meta_service/: .dockerignore  pyproject.toml
image_api/meta_service/src/: entrypoint.sh  errors.py  main.py  settings.py
image_api/meta_service/src/api/: description.py  utils.py
image_api/meta_service/src/api/sdk/: __init__.py  errors.py  legacy_pb.py  utils.py
image_api/meta_service/src/static/: swagger-ui-bundle.js
platform/: Pipfile
platform/activation_manager/: apps.py  certificate.py  models.py  tests.py  urls.py  utils.py
platform/activation_manager/migrations/: 0001_initial.py  0002_auto_20220812_1055.py
platform/activation_manager/senselock/: CMakeLists.txt  main.py
platform/activation_manager/senselock/include/: ApiSenselock.h
platform/activation_manager/senselock/include/tdv_hardware_key/: HardwareKey.h
platform/activation_manager/senselock/src/: ApiSenselock.cpp
platform/activation_manager/signature_tool/py_module/: CMakeLists.txt  main.py
platform/activation_manager/signature_tool/py_module/include/: api_signature_tool.h  base64.h  encrypt.h  key.h
platform/activation_manager/signature_tool/py_module/src/: api_signature_tool.cpp  base64.cpp  encrypt.cpp
platform/api_gateway/: consumers.py  middleware.py  urls.py  views.py
platform/api_gateway/api/: extensions.py  token.py  utils.py
platform/api_gateway/auth_backends/: __init__.py
platform/collector_domain/: admin.py  apps.py  managers.py  models.py  tasks.py
platform/collector_domain/api/: utils.py
platform/collector_domain/migrations/: 0001_initial.py  0002_auto_20220915_1352.py  0003_auto_20221125_0601.py  0004_alter_camera_agent.py  0005_auto_20230329_0902.py
platform/data_domain/: admin.py  apps.py  managers.py  models.py  signals.py  tasks.py
platform/data_domain/api/: utils.py
platform/data_domain/matcher/: __init__.py  main.py
platform/data_domain/migrations/: 0001_initial.py  0002_initial.py  0003_alter_blobmeta_blob.py  0004_activity_status.py  0005_finalize_old_activitites.py
platform/label_domain/: admin.py  apps.py  managers.py  models.py
platform/label_domain/migrations/: 0001_initial.py  0002_label_is_active.py
platform/licensing/: admin.py  apps.py  common_managers.py  configs.py  cryptlex_api.py  managers.py  models.py  policies.py  tasks.py  urls.py  utils.py  views.py
platform/licensing/migrations/: 0001_initial.py
platform/licensing/payment/: managers.py  models.py
platform/licensing/tests/: test_managers.py  test_utils.py
platform/main/: __init__.py  asgi.py  celery.py  settings.py  urls.py
platform/notification_domain/: admin.py  apps.py  managers.py  models.py  tasks.py  utils.py
platform/notification_domain/migrations/: 0001_initial.py  0002_transform_triggers.py  0003_alter_endpoint_type.py  0004_create_default_endpoints.py  0005_auto_20220615_0901.py  0006_trigger_title.py
platform/notification_domain/templates/: notification_overflow.html  notification_presence.html
platform/person_domain/: admin.py  apps.py  managers.py  models.py  tasks.py  utils.py
platform/person_domain/api/: utils.py
platform/person_domain/migrations/: 0001_initial.py  0002_auto_20220927_1505.py  0003_auto_20221014_1037.py  0004_profile_settings.py  0005_alter_profilesettings_extra_fields.py
platform/person_domain/qa_requests/: duplicate_person.sql
platform/platform_lib/: elastic.py  exceptions.py  managers.py  meta_language_parser.py  types.py  utils.py
platform/platform_lib/data/: common_models.py
platform/platform_lib/strawberry_auth/: permissions.py
platform/platform_lib/validation/: __init__.py  (+1 more)
platform/user_domain/: admin.py  apps.py  licensing_api.py  managers.py  models.py  password_validation.py  tasks.py
(+178 files in other folders)
