[tool.poetry]
name = "image-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
anyio = "3.6.2"
click = "8.1.3"
fastapi = "0.85.2"
h11 = "0.14.0"
idna = "3.4"
pydantic = "1.10.2"
python-multipart = "0.0.5"
sniffio = "1.3.0"
starlette = "0.20.4"
uvicorn = "0.19.0"
gunicorn = "20.1.0"
grpcio-tools = "1.51.1"
typing-extensions = "4.5.0"
platform-library = "0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
